5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1637_2704.log
== TEST (2019-04-04 12:54:57) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() = "S"):
	print(nota + nota*0,1)
else:
	print(nota)
-- ERROR:
File "XXXX", line 3
    if (extra.upper() = "S"):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:55:11) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(nota + nota*0,1)
else:
	print(nota)
-- OUTPUT:
5.0 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:55:39) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(nota*1.1)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:55:50) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(nota*1.1)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:04) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(nota*1.1)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:57:21) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(round(nota*1.1, 1))
else:
	print(round(nota, 1))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:57:32) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(round(nota*1.1, 1))
else:
	print(round(nota, 1))
-- EXECUTION TIME:
0.130523
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:16:07) 
-- CODE:
nota = float(input("nota do aluno: "))
extra = input("bonificacao? (S/N) ")
if (extra.upper() == "S"):
	print(round(nota*1.1, 1))
else:
	print(round(nota, 1))
-- EXECUTION TIME:
0.156052
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
